<resources>
    <string name="app_name">Another Me</string>
    <string name="action_settings">Settings</string>
    <string name="action_popup_templates">Popup templates</string>
    <string name="action_sms_templates">Sms templates</string>
    <string name="action_history">History</string>
    <string name="action_camera">Camera</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="notification">Notification receiver</string>
    <string name="fragment_user">User Manager</string>
    <string name="action_notification">Notification</string>
    <string-array name="action_array">
        <item>שום דבר</item>
        <item>לשאול</item>
        <item>פופ אפ</item>
        <item>סמס</item>
        <item>כרטיסים</item>
        <item>קניות</item>
        <item>ביביסיטר</item>
        <item>פגישה</item>
        <item>משימת יומן</item>
        <item>משימת אפליקציה</item>
    </string-array>
    <string name="title_activity_connector">ConnectorActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_share">Share</string>
    <string name="title_activity_base">BaseActivity</string>
</resources>


