<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_history"
        android:orderInCategory="100"
        android:title="@string/action_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_popup_templates"
        android:orderInCategory="100"
        android:title="@string/action_popup_templates"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sms_templates"
        android:orderInCategory="100"
        android:title="@string/action_sms_templates"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/share"
        android:orderInCategory="100"
        android:title="@string/action_camera"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/add_button"
        android:orderInCategory="100"
        android:title="@string/action_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/fragment_user"
        android:icon="@drawable/notification_icon"
        android:orderInCategory="100"
        android:title="@string/fragment_user"
        app:showAsAction="ifRoom" />

</menu>
