<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_history"
        android:orderInCategory="100"
        android:title="@string/action_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_popup_templates"
        android:orderInCategory="100"
        android:title="@string/action_popup_templates"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sms_templates"
        android:orderInCategory="100"
        android:title="@string/action_sms_templates"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_camera"
        android:orderInCategory="100"
        android:title="@string/action_camera"
        app:showAsAction="ifRoom"
        android:icon="@drawable/camera"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom"
        android:icon="@drawable/delete_icon"/>


</menu>
